--- a/appointed_client/web/index.html
+++ b/appointed_client/web/index.html
@@ -28,11 +28,29 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
-
+  
   <title>appointed_client</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "firebase/app";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyAEIjeRBjRhv7EJ72JEh8njjn3BnpF_UHc",
+      authDomain: "appointed-dc4fa.firebaseapp.com",
+      projectId: "appointed-dc4fa",
+      storageBucket: "appointed-dc4fa.firebasestorage.app",
+      messagingSenderId: "524926291571",
+      appId: "1:524926291571:web:184f0699cc391f8b1c6406"
+    };
+    const app = initializeApp(firebaseConfig); // Initialize Firebase
+  </script>
+
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
